--- a/common.fr.po
+++ b/common.fr.po
@@ -21,9 +21,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-18 07:22+0200\n"
+"POT-Creation-Date: 2025-09-19 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Hugo Locurcio, 2013-2014\n"
+"Last-Translator: Yannick Le Guen <leguen.yannick@gmail.com>, 2013-2025\n"
 "Language-Team: French (http://app.transifex.com/team-xonotic/xonotic/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -1554,7 +1554,7 @@ msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/clanarena/clanarena.qc:11
 msgid ""
-"The match ends once a team reaches a certain number of won rounds, or has a "
+"The match ends once a team reaches a certain number of rounds won, or has a "
 "considerable lead over the other team."
 msgstr ""
 
@@ -1605,10 +1605,10 @@ msgstr ""
 #: qcsrc/common/gamemodes/gamemode/ctf/ctf.qc:11
 msgid ""
 "If a flag is dropped into the void or a death trap it will be immediately "
-"returned to its base, or otherwise it will sit idle for a while before "
-"automatically returning itself. If all flags are held by an enemy, after "
-"some time period a \"stalemate\" will initiate and all flag carriers "
-"(\"fc\"s) will be exposed on the radar and with waypoints."
+"returned to its base, or otherwise sit idle for a while before automatically "
+"returning itself. If all flags are held, after some time period a "
+"\"stalemate\" will initiate and all flag carriers (\"fc\"s) will be exposed "
+"on the radar and with waypoints."
 msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/ctf/ctf.qc:13
@@ -1660,7 +1660,7 @@ msgstr ""
 #, c-format
 msgid ""
 "%s is similar to %s, except you don't run in laps, and instead run from the "
-"start line to the finish line, then start over again."
+"start line to the finish line then start over again."
 msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/cts/cts.qc:13
@@ -1698,7 +1698,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Maps often have powerups and items like %s and %s, which are usually highly "
-"contested since sometimes they have the power to make or break a game, so "
+"contested since they sometimes have the power to make or break a game, so "
 "making good use of them is important."
 msgstr ""
 
@@ -1777,7 +1777,7 @@ msgstr ""
 #: qcsrc/common/gamemodes/gamemode/duel/duel.qc:17
 #: qcsrc/menu/xonotic/guide/pages.qc:183 qcsrc/menu/xonotic/guide/pages.qc:186
 msgid "XPM"
-msgstr ""
+msgstr "XPM"
 
 #: qcsrc/common/gamemodes/gamemode/duel/duel.qh:9
 msgid "Duel"
@@ -1895,10 +1895,10 @@ msgstr "Gardez-la-Balle"
 #, c-format
 msgid ""
 "%s is a round-based gametype played with a few teams, where each team starts "
-"with 1 key and all keys must be collected to win the round. The team member "
-"who is given the key at the start of the round is randomly selected after a "
-"ten second period, and the location of all keys will be visible in the radar "
-"after a few seconds."
+"with one key and all keys must be collected to win the round. The team "
+"member who is given the key at the start of the round is randomly selected "
+"after a ten second period, and the location of all keys will be visible on "
+"the radar after a few seconds."
 msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/keyhunt/keyhunt.qc:12
@@ -2165,8 +2165,8 @@ msgstr ""
 msgid ""
 "Players are rewarded a point for each member of the opposing team they frag, "
 "only if they survive the round, and points are deducted for each teammate "
-"fragged. Extra points are also to survivors who survive until the round "
-"timer expires."
+"fragged. Extra points are also given to survivors who survive until the "
+"round timer expires."
 msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/survival/survival.qh:12
@@ -2181,7 +2181,7 @@ msgstr "Survie"
 
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qc:10
 #, c-format
-msgid "%s is the team version of %s, played with 2 teams."
+msgid "%s is the team version of %s, played in teams rather than solo."
 msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qc:11
@@ -2192,7 +2192,7 @@ msgstr ""
 
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qc:12
 msgid ""
-"Careful team coordination and map control is often a key to winning a match, "
+"Careful team coordination and map control is often key to winning a match, "
 "and sometimes players will share weapons with their teammates."
 msgstr ""
 
@@ -2745,7 +2745,7 @@ msgstr "Pointe de mage"
 
 #: qcsrc/common/monsters/monster/spider.qc:244
 msgid ""
-"The Spider is a large mechanically enhanced arachnoid adept at hunting "
+"The Spider is a large mechanically-enhanced arachnoid adept at hunting "
 "speedy enemies."
 msgstr ""
 
@@ -2885,12 +2885,12 @@ msgstr "Munitions"
 #: qcsrc/common/mutators/mutator/buffs/buff/bash.qc:27
 #, c-format
 msgid ""
-"The %s increases knockback force you deal, and makes you immune to knockback "
-"while the buff is active."
+"The %s increases the knockback force you deal, and makes you immune to "
+"knockback while the buff is active."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/buffs/buff/bash.qc:28
-msgid "It also slightly increases knockback you deal to yourself."
+msgid "It also slightly increases the knockback you deal to yourself."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/buffs/buff/bash.qh:14
@@ -2916,7 +2916,7 @@ msgstr "Handicap"
 #: qcsrc/common/mutators/mutator/buffs/buff/flight.qc:31
 #, c-format
 msgid ""
-"While you have the %s, you can crouch while midair to switch your gravity, "
+"While you have the %s, you can crouch while mid-air to switch your gravity, "
 "allowing flight."
 msgstr ""
 
@@ -3216,9 +3216,9 @@ msgstr "Grappin"
 #: qcsrc/common/mutators/mutator/instagib/instagib.qc:15
 #, c-format
 msgid ""
-"%s is a mutator that removes all weapons and weapon pickups and gives all "
-"players the %s, which immediately frags players in a single shot, hence the "
-"name \"InstaGib.\""
+"%s is a mutator that removes all weapons and weapon pickups from the map, "
+"instead giving players the %s, which immediately frags players in a single "
+"shot, hence the name \"InstaGib.\""
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/instagib/instagib.qc:17
@@ -3362,7 +3362,7 @@ msgstr "Grenade de glace"
 #: qcsrc/common/mutators/mutator/nades/nade/monster.qc:27
 #, c-format
 msgid ""
-"The %s detonates after a short delay, spawning one of four monster types."
+"The %s detonates after a short delay, spawning one of the five monster types."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/monster.qh:19
@@ -3373,7 +3373,7 @@ msgstr "Grenade de monstre"
 #, c-format
 msgid ""
 "The %s detonates after a short delay, spreading fiery napalm globs around in "
-"the fountain. The napalm fire balls burn for a while, and damage players who "
+"a fountain. The napalm fire balls burn for a while, and damage players who "
 "get too close."
 msgstr ""
 
@@ -3385,8 +3385,8 @@ msgstr "Grenade au napalm"
 #, c-format
 msgid ""
 "The (normal) %s explodes after a short delay, dealing damage to nearby "
-"players. If other nade types are destroyed before they detonate, they will "
-"instead explode similarly, without doing their special effects."
+"players. If other nade types are destroyed before they detonate, they "
+"instead explode similar to this, without doing their special effects."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/normal.qc:19
@@ -3404,9 +3404,9 @@ msgstr "Grenade"
 #: qcsrc/common/mutators/mutator/nades/nade/spawn.qc:40
 #, c-format
 msgid ""
-"The %s detonates after a short delay, temporarily setting your spawn point "
-"to where it detonated. It is useful for cases where you want to go back to "
-"some point on the map after you die."
+"The %s detonates after a short delay, temporarily setting your spawnpoint to "
+"where it detonated. It is useful for cases where you want to go back to some "
+"point on the map after you die."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/spawn.qh:17
@@ -3457,8 +3457,8 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:52
 msgid ""
-"There are multiple types of nades that can be selected, and many options "
-"available regarding this mutator, so they may act a little differently "
+"There are multiple types of nades that can be selected, and many "
+"configuration options for this mutator, so they may act a little differently "
 "depending on the server you play on."
 msgstr ""
 
@@ -3500,8 +3500,8 @@ msgstr "Nouveaux jouets"
 #: qcsrc/common/mutators/mutator/nix/nix.qc:8
 #, c-format
 msgid ""
-"%s is a mutator that gives all players the same randomly selected weapon. "
-"After some time, the weapon is reselected, and this repeats forever. Weapon "
+"%s is a mutator that gives all players the same randomly-selected weapon. "
+"After some time the weapon is reselected, and this repeats forever. Weapon "
 "and ammo pickups are also removed from the map."
 msgstr ""
 
@@ -3554,7 +3554,7 @@ msgstr ""
 #: qcsrc/common/mutators/mutator/overkill/okshotgun.qc:133
 #, c-format
 msgid ""
-"Like with all %s weapons, the secondary fire shoots a laser which does not "
+"Like with all %s weapons, the secondary fire shoots a laser which doesn't "
 "damage or push enemies, but can be used to push yourself around."
 msgstr ""
 
@@ -3732,8 +3732,9 @@ msgid ""
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/powerups/powerup/jetpack.qc:21
+#, c-format
 msgid ""
-"It consumes Fuel ammo while operating, so make sure you don't run out when "
+"It consumes %s ammo while operating, so make sure you don't run out when "
 "you're high up!"
 msgstr ""
 
@@ -3804,9 +3805,9 @@ msgstr "Force"
 #, c-format
 msgid ""
 "The %s mutator removes the slight delay when immediately detonating a %s "
-"rocket after firing. This allows for rockets fired to be detonated much "
-"closer to your hitbox, so they can give you a much larger speed boost, also "
-"allowing flying around the map."
+"rocket after firing. This allows rockets to be detonated much closer to your "
+"hitbox, so they can give you a much larger speed boost, also allowing flying "
+"around the map."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/rocketflying/rocketflying.qh:5
@@ -3862,7 +3863,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Additionally the amount of health players get is equal to the damage they "
-"deal, which isn't normaly the case with the %s."
+"deal, which isn't normally the case with the %s."
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/walljump/walljump.qc:81
@@ -6888,7 +6889,7 @@ msgstr ""
 #: qcsrc/common/turrets/turret/flac.qc:26
 #, c-format
 msgid ""
-"The shells it shoots are against projectiles such as the %s secondary fire "
+"The shells it shoots target projectiles such as the %s secondary fire "
 "grenade, %s secondary fire balls, %s rockets, and other missiles."
 msgstr ""
 
@@ -7556,7 +7557,7 @@ msgstr "Bumblebee"
 #: qcsrc/common/vehicles/vehicle/racer.qc:650
 #, c-format
 msgid ""
-"The %s vehicle looks like a jet, but does not fly uwpards very well. It "
+"The %s vehicle looks like a jet, but does not fly upwards very well. It "
 "seats only one passenger, who becomes the pilot."
 msgstr ""
 
@@ -7585,17 +7586,17 @@ msgstr "Canon de Racer"
 #: qcsrc/common/vehicles/vehicle/raptor.qc:850
 #, c-format
 msgid ""
-"The %s vehicle is a flying vehicle that takes only one pilot, who can also "
-"opearate two weapons."
+"The %s vehicle is a flying vehicle that takes only one pilot, who can "
+"operate both of the weapons."
 msgstr ""
 
 #: qcsrc/common/vehicles/vehicle/raptor.qc:851
 #, c-format
 msgid ""
 "The two weapons have different reticles for them similar to the %s. The "
-"primary weapon is laser-based, and is shot toward the white reticle. The "
+"primary weapon is laser-based, shooting toward the white reticle. The "
 "secondary weapon drops bombs to the ground, aiming towards the green "
-"reticle. The white reticle always points at the head of the vehicle, while "
+"reticle. The white reticle always points to the head of the vehicle, while "
 "the green reticle's location is determined by the momentum of the vehicle."
 msgstr ""
 
@@ -7631,8 +7632,8 @@ msgid ""
 "them similar to the %s. The primary weapon is a machine gun, and is shot "
 "toward the green reticle. The secondary weapon shoots rockets towards the "
 "white reticle. The white reticle points to the front of the vehicle, while "
-"the green reticle also points to the front, with a bit of delay when the %s "
-"rotates."
+"the green reticle also points to the front but with a bit of delay when the "
+"%s rotates."
 msgstr ""
 
 #: qcsrc/common/vehicles/vehicle/spiderbot.qh:21
@@ -7716,8 +7717,8 @@ msgstr ""
 
 #: qcsrc/common/weapons/weapon/arc.qc:1519
 msgid ""
-"The secondary fire rapidly shoots electro bolts forward, exploding on impact "
-"and dealing some splash damage."
+"The secondary fire rapidly shoots electric bolts forward, exploding on "
+"impact and dealing some splash damage."
 msgstr ""
 
 #: qcsrc/common/weapons/weapon/arc.qc:1520
@@ -7982,7 +7983,7 @@ msgstr ""
 
 #: qcsrc/common/weapons/weapon/hlac.qc:247
 msgid ""
-"The secondary fire shoots a randomly scattered burst of multiple lasers at "
+"The secondary fire shoots a burst of multiple randomly-scattered lasers at "
 "once."
 msgstr ""
 
@@ -8023,7 +8024,7 @@ msgstr ""
 #: qcsrc/common/weapons/weapon/hook.qc:431
 msgid ""
 "The secondary fire usually drops a gravity bomb that affects enemies, also "
-"releasing light a smoke like a flashbang."
+"releasing light and smoke sort of like a flashbang."
 msgstr ""
 
 #: qcsrc/common/weapons/weapon/hook.qc:432
@@ -8202,7 +8203,7 @@ msgstr ""
 
 #: qcsrc/common/weapons/weapon/rifle.qc:274
 msgid "zoom"
-msgstr ""
+msgstr "zoom"
 
 #: qcsrc/common/weapons/weapon/rifle.qc:275
 #: qcsrc/common/weapons/weapon/vortex.qc:389
@@ -8318,7 +8319,7 @@ msgstr ""
 #: qcsrc/common/weapons/weapon/vaporizer.qc:421
 #, c-format
 msgid ""
-"The secondary fire fires a laser identical to that fired by the %s, with "
+"The secondary fire shoots a laser identical to that fired by the %s, with "
 "strong knockback."
 msgstr ""
 
@@ -8971,7 +8972,7 @@ msgstr "Contrôles"
 #: qcsrc/menu/xonotic/dialog_singleplayer.qc:159
 #: qcsrc/menu/xonotic/dialog_singleplayer_guide.qh:7
 msgid "Guide"
-msgstr ""
+msgstr "Guide"
 
 #: qcsrc/menu/xonotic/dialog_gamemenu.qc:60
 msgid "Quick menu"
@@ -12751,7 +12752,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_singleplayer_guide.qc:41
 msgid "Description"
-msgstr ""
+msgstr "Description"
 
 #: qcsrc/menu/xonotic/dialog_singleplayer_winner.qh:7
 msgid "Winner"
@@ -12824,11 +12825,11 @@ msgstr "chacun pour soi"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:9 qcsrc/menu/xonotic/guide/pages.qc:62
 msgid "Introduction"
-msgstr ""
+msgstr "Introduction"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:10
 msgid "Movement"
-msgstr ""
+msgstr "Mouvement"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:11
 msgid "Gametypes"
@@ -12836,15 +12837,15 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/guide.qh:17
 msgid "Monsters"
-msgstr ""
+msgstr "Monstres"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:18
 msgid "Vehicles"
-msgstr ""
+msgstr "Véhicules"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:19
 msgid "Turrets"
-msgstr ""
+msgstr "Tourelles"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:21
 msgid "Mods"
@@ -12852,7 +12853,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:19
 msgid "About this guide"
-msgstr ""
+msgstr "À propos de ce guide"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:22
 msgid "Welcome to Xonotic, the free and fast arena shooter!"
@@ -12881,12 +12882,12 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:30
 msgid "Community"
-msgstr ""
+msgstr "Communauté"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:32
 #, c-format
 msgid "%s on Matrix, %s on QuakeNet IRC, or the Discord"
-msgstr ""
+msgstr "%s sur Matrix, %s sur QuakeNet IRC, ou le Discord"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:34
 msgid ""
@@ -12907,7 +12908,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:40
 msgid "Getting good"
-msgstr ""
+msgstr "S'améliorer"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:43
 msgid ""
@@ -12934,7 +12935,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:52
 msgid "XonStat"
-msgstr ""
+msgstr "XonStat"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:55
 msgid ""
@@ -13105,16 +13106,16 @@ msgstr ""
 #, c-format
 msgid ""
 "In order to waste as little speed as possible while flicking back, switch to "
-"strafe key for the duration of the flick. This means using %s if the wall is "
-"to your left, and %s if the wall is to your right."
+"a strafe key for the duration of the flick. This means using %s if the wall "
+"is to your left, and %s if the wall is to your right."
 msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:126
 #, c-format
 msgid ""
-"The %s can be used just like the %s for movement, however it inflicts much "
-"more damage to the player. In gametypes without self damage however it is a "
-"very versatile movement tool."
+"The %s can be used just like the %s for movement, but it inflicts much more "
+"damage to the player. In gametypes without self damage however it is a very "
+"versatile movement tool."
 msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:128
@@ -13200,7 +13201,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:162
 msgid "Advanced Movement"
-msgstr ""
+msgstr "Mouvements avancés"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:165
 msgid ""
